fixed body dimension on mobile version

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a{ text-decoration: none; }
 }
 
 .video-background{
-    width: 100%;
+    width: 100vh;
     height: 100vh;
     position: fixed;
     top: 0;
@@ -383,6 +383,14 @@ input[type=radio] {
   }
 
     @media (max-width: 768px) {
+      body, html {
+        margin: 0;
+        width: 100vw;
+        min-width: 100vw;
+        max-width: 100vw;
+        overflow-x: hidden;
+        overflow-y: auto;
+        }
       .panel{
         height: 110vh;
       }
@@ -393,12 +401,11 @@ input[type=radio] {
         position: absolute;
         top: 45px;
         background-color:  rgb(17, 17, 17);
-        width: 100%;
+        width: 100vh;
         height: 100vh;
         height: 0vh;
         overflow: hidden;
         transition: all 1s cubic-bezier(.215, .61, .355, 1);
-        padding: 1px;
       }
 
       .header__menu li{
